Fixes the Leaflet map not showing attribution

--- a/src/scss/vends/leaflet/_controls.scss
+++ b/src/scss/vends/leaflet/_controls.scss
@@ -7,6 +7,11 @@
   clear: both;
 }
 
+.leaflet-control-container {
+  width: 100%;
+  height: 100%;
+}
+
 .leaflet-top,
 .leaflet-bottom {
   position: absolute;
